--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">SunnyWeather</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="AddressHint">输入地址</string>
+    <string name="BackGroundImg">背景图片</string>
 </resources>
